src/test/ui/ext-nonexistent.stderr
error: cannot find macro `iamnotanextensionthatexists!` in this scope
  --> $DIR/ext-nonexistent.rs:2:13
   |
LL | fn main() { iamnotanextensionthatexists!(""); }
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

