src/test/ui/ext-nonexistent.rs
// error-pattern:cannot find macro
fn main() { iamnotanextensionthatexists!(""); }
